--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,14 +9,18 @@
         "@typescript-eslint/parser",
         "cheerio"
     ],
-    "groupName": "all dependencies",
-    "separateMajorMinor": false,
-    "groupSlug": "all",
     "packageRules": [
         {
-            "matchPackagePatterns": ["*"],
-            "groupName": "all dependencies",
-            "groupSlug": "all"
+            "updateTypes": ["major", "minor", "patch"],
+            "matchPackageTypes": ["dependencies"],
+            "automerge": false,
+            "groupName": "Dependencies"
+        },
+        {
+            "updateTypes": ["major", "minor", "patch"],
+            "matchPackageTypes": ["devDependencies"],
+            "automerge": false,
+            "groupName": "Dev Dependencies"
         }
     ],
     "lockFileMaintenance": {
