feat(CI): seperate dependencies and dev-dependencies
Skip CI

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,13 +12,13 @@
     "packageRules": [
         {
             "updateTypes": ["major", "minor", "patch"],
-            "matchPackageTypes": ["dependencies"],
+            "matchDepTypes": ["dependencies"],
             "automerge": false,
             "groupName": "Dependencies"
         },
         {
             "updateTypes": ["major", "minor", "patch"],
-            "matchPackageTypes": ["devDependencies"],
+            "matchDepTypes": ["devDependencies"],
             "automerge": false,
             "groupName": "Dev Dependencies"
         }
