fix(app): revert E2E bump dev dependencies

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
         "test": "cross-env TS_NODE_PROJECT=tsconfig.test.json TS_NODE_DISABLE_WARNINGS=1 nyc --reporter=lcov mocha --config test/.mocharc.json && node test/dist/cli-revert-root-folder.js",
         "posttest": "rimraf test/dist",
         "test:watch": "npm-watch build",
+        "*********TEST E2E********": "*******************",
         "test:simple-doc": "ts-node ./bin/index-cli.js -p ./test/fixtures/sample-files/tsconfig.simple.json -d doc -s --port 4000 & sleep 20",
         "presaucelabs-test-e2e-mocha": "npm run test:simple-doc",
         "saucelabs-test-e2e-mocha": "./node_modules/.bin/wdio wdio-saucelabs.conf.js",
+        "prelocal-test-e2e-mocha": "npm run test:simple-doc",
         "local-test-e2e-mocha": "./node_modules/.bin/wdio wdio.conf.js",
         "premerge-lcov": "mv coverage-refactoring/lcov.info coverage/lcov-refactoring.info",
         "merge-lcov": "./node_modules/.bin/lcov-result-merger 'coverage/lcov-*.info' 'coverage/lcov_merged.info'",
@@ -138,14 +140,14 @@
         "@types/traverse": "0.6.37",
         "@typescript-eslint/eslint-plugin": "7.11.0",
         "@typescript-eslint/parser": "7.11.0",
-        "@wdio/cli": "9.5.1",
-        "@wdio/local-runner": "9.5.1",
-        "@wdio/mocha-framework": "9.5.0",
-        "@wdio/sauce-service": "9.5.1",
-        "@wdio/spec-reporter": "9.5.0",
+        "@wdio/cli": "9.4.1",
+        "@wdio/local-runner": "9.4.1",
+        "@wdio/mocha-framework": "9.2.8",
+        "@wdio/sauce-service": "9.4.1",
+        "@wdio/spec-reporter": "9.2.14",
         "auto-changelog": "2.5.0",
         "chai": "4.4.1",
-        "chromedriver": "131.0.4",
+        "chromedriver": "131.0.1",
         "codecov": "3.8.3",
         "cpx2": "^8.0.0",
         "cross-env": "7.0.3",
