feat(CI): switch E2E tests to playwright - WIP

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,4 +104,4 @@ jobs:
               run: npm run build
 
             - name: E2E tests
-              run: npm run local-test-e2e-playwright
+              run: npx playwright install && npm run local-test-e2e-playwright
