--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,4 +110,4 @@ jobs:
               run: npx playwright install-deps webkit
 
             - name: E2E tests
-              run: npm run local-test-e2e-playwright
+              run: npm run test-e2e-playwright
