--- a/package.json
+++ b/package.json
@@ -29,11 +29,7 @@
         "test:watch": "npm-watch build",
         "*********TEST E2E********": "*******************",
         "test:simple-doc": "ts-node ./bin/index-cli.js -p ./test/fixtures/sample-files/tsconfig.simple.json -d doc -s --port 4000",
-        "presaucelabs-test-e2e-mocha": "npm run test:simple-doc",
-        "saucelabs-test-e2e-mocha": "./node_modules/.bin/wdio wdio-saucelabs.conf.js",
-        "prelocal-test-e2e-mocha": "npm run test:simple-doc",
-        "local-test-e2e-mocha": "./node_modules/.bin/wdio wdio.conf.js",
-        "local-test-e2e-playwright": "npx playwright test",
+        "test-e2e-playwright": "npx playwright test",
         "premerge-lcov": "mv coverage-refactoring/lcov.info coverage/lcov-refactoring.info",
         "merge-lcov": "./node_modules/.bin/lcov-result-merger 'coverage/lcov-*.info' 'coverage/lcov_merged.info'",
         "*********PUBLISH********": "*******************",
@@ -142,14 +138,8 @@
         "@types/traverse": "0.6.37",
         "@typescript-eslint/eslint-plugin": "7.11.0",
         "@typescript-eslint/parser": "7.11.0",
-        "@wdio/cli": "9.4.1",
-        "@wdio/local-runner": "9.4.1",
-        "@wdio/mocha-framework": "9.2.8",
-        "@wdio/sauce-service": "9.4.1",
-        "@wdio/spec-reporter": "9.2.14",
         "auto-changelog": "2.5.0",
         "chai": "4.4.1",
-        "chromedriver": "131.0.1",
         "codecov": "3.8.3",
         "cpx2": "^8.0.0",
         "cross-env": "7.0.3",
@@ -166,14 +156,12 @@
         "rimraf": "6.0.1",
         "rollup": "4.29.1",
         "rollup-plugin-typescript2": "0.36.0",
-        "saucectl": "^0.190.1",
         "sinon": "19.0.2",
         "sonar-scanner": "3.1.0",
         "source-map-support": "0.5.21",
         "supertest": "7.0.0",
         "ts-node": "10.9.2",
-        "tslib": "2.8.1",
-        "wdio-chromedriver-service": "8.1.1"
+        "tslib": "2.8.1"
     },
     "collective": {
         "type": "opencollective",
